Changelog 1.6.16:
Fix response.status_code check for Trakt Auth

Changelog 1.6.15:
Adjsut status code responses for Trakt module

Changelog 1.6.14:
Remove cleaning of depricated settings as it was causing corrupt settings file

Changelog 1.6.13:
Add workaround on failure to grab user lists

Changelog 1.6.12:
Fix endpoint for still watching and playing next windows

Changelog 1.6.11:
Fix provider list not showing due to theme changes

Changelog 1.6.10:
Increased concurrent threads for Trakt Sync database to speed up large menu lists
Fixed movie view by ID setting not displaying
Fix TypeError when a manual update check is performed and no providers are installed.
Added monkey patch of requests to allow cancellation of provider requests after we have exited getSources keepalive
Added support to inform providers to shutdown
Force lists to sync against trakts dates instead of local
Fix marking watched on specials if no episodes are present
Re-factored marking as watched for shows/seasons to speed up process
Randomize service run time to avoid conflicting schedules
More py3 compatibility fixes
Zip file handling fixes due to issues with py3 compat
Extended logging in RD resolving to allow better identification of issues

Changelog 1.6.9:
Fixed AllDebrid Cache check mistake during py3 compatibility changes

Changelog 1.6.8:
Tighten and speed up PM cloud file inspection
Multiple fixes to TMDb module
buildSimpleTorrentInfo now more safe for shows that lack information
Added compatibility for Trakt usernames with non ASCII characters
Created new regex method for identifying files inside a pack
Premiumize resolver now uses regex method
Real Debrid resolver now uses regex method
Reworked RD cache check method to use new new methods created
Cleaned up Real Debrid resolver method
Cleaned up Premiumize resolver method
Genre lists now use the trending endpoint to provide more current/relevant titles